--- a/batch/pom.xml
+++ b/batch/pom.xml
@@ -55,6 +55,17 @@
       <version>${spring.boot.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- Spring Batch -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-batch</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
