--- a/batch/pom.xml
+++ b/batch/pom.xml
@@ -20,6 +20,12 @@
     <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.0.5.RELEASE</version>
+  </parent>
+
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
