--- a/batch/pom.xml
+++ b/batch/pom.xml
@@ -192,6 +192,13 @@
       <artifactId>appengine-api-stubs</artifactId>
       <version>1.9.64</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.appengine</groupId>
+      <artifactId>appengine-testing</artifactId>
+      <version>1.9.64</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
